<resources>
    <string name="app_name">NewsFeed</string>

    <string name="add_feed">add feed</string>
    <string name="feed_link">Feed link</string>
    <string name="add">Add</string>

    <string name="share_news_chooser_title">Share news</string>
    <string name="open_link_chooser">Open source link</string>
    <string name="news_share_format">%s /n %s /n</string>
    <string name="share_label">share</string>
    <string name="open_source">open source</string>

    <string name="feed_share_format">%s /n %s /n</string>

    <string name="feed_removed_message">News feed has been deleted</string>
    <string name="news_hidden_message">The news was hidden</string>
    <string name="not_reviewed_count_format">News not viewed: %d</string>
    <string name="custom_title_switch">Use custom title</string>
    <string name="auto_updated_switch">Enabled auto updated</string>
    <string name="feed_category_label">Category</string>
    <string name="custom_feed_name">Custom feed name</string>
    <string name="title_activity_settings">Settings</string>

    <string name="remove_category_message">Category has been deleted</string>

    <string name="style_options_category">Style</string>
    <string name="theme_preference_title">Theme</string>
    <string-array name="current_theme_entities">
        <item>Main</item>
        <item>Dark</item>
    </string-array>

    <string name="refresh_options_category">Refresh options</string>
    <string name="auto_refresh_enabled_title">Auto refresh</string>
    <string name="auto_refresh_enabled_summary">Enabled auto refresh news feeds in network</string>

    <string name="auto_refresh_frequency_title">Update frequency</string>
    <string name="auto_refresh_frequency_summary">hours</string>

    <string name="wifi_only_title">WI-FI only</string>
    <string name="wifi_only_summary">Download updates only by WI-FI</string>

    <string name="notification_options_category">Notifications</string>
    <string name="notification_enabled_title">Enabled notification</string>
    <string name="notification_enabled_summary">Display app notifications</string>

    <string name="notification_type_title">Type of notification</string>
    <string name="menu_settings_title">Settings</string>
    <string-array name="notification_type_entities">
        <item>Nothing</item>
        <item>Only vibration</item>
        <item>Sound only</item>
        <item>Sound and vibration</item>
    </string-array>

    <string name="cache_options_category">Cache options</string>
    <string name="cache_size_title">Cache size</string>
    <string name="cache_size_summary">news</string>

    <string name="cache_frequency_title">Cache frequency</string>
    <string name="cache_frequency_summary">days</string>

    <string name="notification_result_update_title">Feed is updated</string>
    <string name="notification_result_update_content">Updated feed: %d, News: %d</string>

    <string name="notification_update_progress_title">Updating feeds</string>
    <string name="category_name">Category name</string>
    <string name="add_category">add category</string>
    <string name="dialog_add_category_title">Add category</string>

    <string name="non_category_title">None category</string>
    <string name="category">category</string>
    <string name="list_is_empty">List is empty</string>

    <string name="tab_feed_title">Feeds</string>
    <string name="tab_news_title">News</string>

    <string name="date_time_format">%s %s</string>

    <string name="http_fail_message">Server request failed</string>
    <string name="incorrect_link_message">Invalid link to feed</string>
    <string name="incorrect_response_message">Incorrect server response</string>
    <string name="feed_exists_message">Feed has already exist</string>
    <string name="feed_not_exists_message">This feed is not exist</string>
    <string name="no_internet_message">Internet connection disabled</string>
    <string name="unknown_error_message">Error loading data</string>

    <string name="change_theme_message">The new theme will be applied after the application is restarted.</string>
</resources>
